--- a/lxd/TVIP-AXI/sample/work/makefile
+++ b/lxd/TVIP-AXI/sample/work/makefile
@@ -14,6 +14,11 @@ FILE_LISTS	+= $(TVIP_AXI_HOME)/compile.f
 FILE_LISTS	+= $(TVIP_AXI_HOME)/sample/env/compile.f
 
 SOURCE_FILES	+= $(TVIP_AXI_HOME)/sample/env/tvip_axi_sample_delay.sv
+SOURCE_FILES    += $(TVIP_AXI_HOME)/sample/env/priority_encoder.v
+SOURCE_FILES    += $(TVIP_AXI_HOME)/sample/env/arbiter.v
+SOURCE_FILES    += $(TVIP_AXI_HOME)/sample/env/axi_interconnect.v
+SOURCE_FILES    += $(TVIP_AXI_HOME)/sample/env/axi4_safety_connector.v
+SOURCE_FILES    += $(TVIP_AXI_HOME)/sample/env/axi4_safety_connector_wrapper.sv
 SOURCE_FILES	+= $(TVIP_AXI_HOME)/sample/env/top.sv
 
 SIMULATOR	?= vcs
