multi-agent finishes run with plenty bugs

--- a/lxd/.gitignore
+++ b/lxd/.gitignore
@@ -10,4 +10,4 @@ TVIP-AXI/tue/.settings/
 TVIP-AXI/sample/work/verdiLog/
 TVIP-AXI/sample/work/simv.daidir/
 TVIP-AXI/sample/work/csrc/
-TVIP-AXI/sample/work/simv
+TVIP-AXI/sample/work/simv*
