--- a/lxd/.gitignore
+++ b/lxd/.gitignore
@@ -11,3 +11,4 @@ TVIP-AXI/sample/work/verdiLog/
 TVIP-AXI/sample/work/simv.daidir/
 TVIP-AXI/sample/work/csrc/
 TVIP-AXI/sample/work/simv*
+TVIP-AXI/sample/work/coverage_report/
