--- a/lxd/.gitignore
+++ b/lxd/.gitignore
@@ -12,4 +12,4 @@ TVIP-AXI/sample/work/simv.daidir/
 TVIP-AXI/sample/work/csrc/
 TVIP-AXI/sample/work/simv*
 TVIP-AXI/sample/work/coverage_report/
-TVIP-AXI/sample/work/default/cm.vdb/
+cm.vdb/
