makefile TVIP_AXI_HOME restore

--- a/lxd/TVIP-AXI/sample/work/makefile
+++ b/lxd/TVIP-AXI/sample/work/makefile
@@ -1,5 +1,5 @@
-#TVIP_AXI_HOME	= $(shell git rev-parse --show-toplevel)/lxd/TVIP-AXI
-TVIP_AXI_HOME = /home/ICer/ic_prjs/AXI4_Interconnect_linuxtest/lxd/TVIP-AXI
+#TVIP_AXI_HOME	= $(shell git rev-parse --show-toplevel)
+TVIP_AXI_HOME = $(shell git rev-parse --show-toplevel)/lxd/TVIP-AXI
 export TVIP_AXI_HOME
 
 TUE_HOME	?= $(TVIP_AXI_HOME)/tue
