--- a/lxd/.gitignore
+++ b/lxd/.gitignore
@@ -13,3 +13,6 @@ TVIP-AXI/sample/work/csrc/
 TVIP-AXI/sample/work/simv*
 TVIP-AXI/sample/work/coverage_report/
 cm.vdb/
+TVIP-AXI/sample/work/fault_test/*
+all_module.txt
+all_signal.txt
